--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="hero__layer-inner fx-container fx-centered" data-tilt data-tilt-perspective="2000" data-tilt-max="15">
         <div class="hero__intro-text">
         <h1 class="hero__heading">Hi ! I'm Marcin,<br>
-          <span class="hero__subheading">a Web Developer<br>& UX / UI Designer</span>
+          <span class="hero__subheading">a Web Developer<br>& UX/UI Designer</span>
         </h1>
         <h5>I live in Cracow.</h5>
       </div>
@@ -247,7 +247,7 @@
               </div>
             </div>
           </div>
-          <h2>Some of my designs</h2>
+          <!-- <h2>Some of my designs</h2>
           <div class="interactive-box__inner-bottom fx-container">
             <div class="interactive-box__tile fx-flex1">
               <div class="interactive-box__tile-overlay fx-container fx-centered">
@@ -259,14 +259,14 @@
                 <a href="../../img/accounting.png" download class="fx-container fx-centered button">see details</a>
               </div>
             </div>
-          </div>
+          </div> -->
       </div>
     </section>
     <section id="contact" class="bg-img__container">
       <div class="bg-img__heading section__heading fx-container">
         <div class="bg-img__heading-left section__heading-left">
-          <p>just call or send an email</p>
-          <h2>Contact me</h2>
+          <p>call or send an email</p>
+          <h2>Contact</h2>
         </div>
         <div class="bg-img__heading-right section__heading-right fx-container fx-column fx-space-between">
           <div class="bg-img__icon-top section__icon-top">
