--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
               <img src="img/svg/react.svg" />
             <figcaption>
               <h3>REACT</h3>
-              <p>This is what I startet to learn recently.</p>
+              <p>This is what I started to learn recently and would love to become more experienced with React.</p>
             </figcaption>
             <div class="hover"></div>
           </figure>
