--- a/index.html
+++ b/index.html
@@ -249,16 +249,16 @@
           </div>
       </div>
     </section>
-    <section id="contact" class="bg-img__container">
+    <section id="contact" class="bg-img__container fx-container fx-column">
+      <div class="bg-img__container-avatar fx-container fx-centered">
+          <img src="img/ja.jpg" class="avatar">
+        </div>
       <div class="bg-img__container-inner fx-container fx-f-start fx-column">
         <p>Do you think my offer is interestinng and you have your office located in Cracow? Great! I live here and I am ready for new job opportunities.</p>
         <p>Are you from different city, country or even continent? No problem! I can work remotely :)</p>
         <p>I am open minded to new carrer oportunities and interests.</p>
         <p>Email me: <a href="mailto:marcin.adam.mroczko@gmail.com" class="link">marcin.adam.mroczko@gmail.com</a></p>
         <p>Call me: <a href="tel:0048608214209" class="link">(+48) 608 214 209</a></p>
-        <div class="bg-img__container-avatar fx-container fx-centered">
-          <img src="img/ja.jpg" class="avatar">
-        </div>
       </div>
       <div class="bg-img__heading section__heading fx-container">
         <div class="bg-img__heading-left section__heading-left">
