--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   		</div>
   	</section>
     <section id="skills" class="bg-img__container ">
-      <div class="bg-img__heading section__heading fx-container fx-centered">
+      <div class="bg-img__heading section__heading fx-container">
         <div class="bg-img__heading-left section__heading-left">
           <p>that's what I can do</p>
           <h2>Skillset</h2>
