--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
         <p>Do you think my offer is interestinng and you have your office located in Cracow? Great! I live here and I am ready for new job opportunities.</p>
         <p>Are you from different city, country or even continent? No problem! I can work remotely :)</p>
         <p>I am open minded to new carrer oportunities and interests.</p>
-        <p>Email me: <a href="mailto:marcin.adam.mroczko@gmail.com" class="link">marcin.adam.mroczko@gmail.com</a></p>
-        <p>Call me: <a href="tel:0048608214209" class="link">(+48) 608 214 209</a></p>
+        <p>Email me: <br /><a href="mailto:marcin.adam.mroczko@gmail.com" class="link">marcin.adam.mroczko@gmail.com</a></p>
+        <p>Call me: <br /><a href="tel:0048608214209" class="link">(+48) 608 214 209</a></p>
       </div>
     </section>
   </main>
