--- a/index.html
+++ b/index.html
@@ -282,10 +282,10 @@
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.4.1/vanilla-tilt.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.7/js/swiper.min.js"></script>
-<script src="js/preloader.js"></script>
-<script src="js/appear-plugin.js"></script>
-<script src="js/main-functions.js"></script>
-<script src="js/mobile-scripts.js"></script>
+<script src="js/preloader.min.js"></script>
+<script src="js/appear-plugin.min.js"></script>
+<script src="js/main-functions.min.js"></script>
+<script src="js/mobile-scripts.min.js"></script>
 <script src="js/swiper.js"></script>
 </body>
 </html>
