--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
       </div>
     </section>
     <section id="contact" class="bg-img__container fx-container fx-column">
-      <div class="bg-img__container-avatar fx-container fx-centered">
+      <div class="bg-img__container-avatar fx-container fx-centered" data-tilt data-tilt-reverse="true" data-tilt-perspective="1000">
           <img src="img/ja.jpg" class="avatar">
         </div>
       <div class="bg-img__heading section__heading fx-container">
