--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
     </section>
     <section id="contact" class="bg-img__container fx-container fx-column">
       <div class="bg-img__container-avatar fx-container fx-centered" >
-          <img src="img/ja.jpg" class="avatar" data-tilt data-tilt-reverse="true" data-tilt-perspective="1000">
+          <img src="img/ja.jpg" class="avatar">
         </div>
       <div class="bg-img__heading section__heading fx-container">
         <div class="bg-img__heading-left section__heading-left">
