--- a/index.html
+++ b/index.html
@@ -275,7 +275,13 @@
       </div>
     </section>
   </main>
-  <footer>
+  <footer class="fx-container fx-space-between">
+    <ul class="hero__menu-items fx-container fx-centered">
+          <li><a href="https://www.linkedin.com/in/marcinmroczko/?locale=en_US" target="_blank"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
+          <li><a href="https://github.com/MrEyelet" target="_blank"><i class="fab fa-github" aria-hidden="true"></i></a></li>
+          <li><a href="https://dribbble.com/marcin-mroczko" target="_blank"><i class="fab fa-dribbble" aria-hidden="true"></i></a></li>
+          <li><a href="mailto:marcin.adam.mroczko@gmail.com"><i class="far fa-envelope" aria-hidden="true"></i></a></li>
+        </ul>
     <p>Marcin Mroczko Copyright 2018 &copy;</p>
   </footer>
 <script src="https://cdn.jsdelivr.net/scrollreveal.js/3.3.1/scrollreveal.min.js"></script>
