--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
       </div>
     </section>
   </main>
-  <footer class="fx-container fx-space-between">
+  <footer class="fx-container fx-space-between fx-centered-v">
     <ul class="hero__menu-items fx-container fx-centered">
           <li><a href="https://www.linkedin.com/in/marcinmroczko/?locale=en_US" target="_blank"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
           <li><a href="https://github.com/MrEyelet" target="_blank"><i class="fab fa-github" aria-hidden="true"></i></a></li>
