--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<div class="hero__top-bar fx-container fx-space-between fx-centered-v">
 			<a href="#top"><img class="hero__top-bar__left" src="img/svg/logo-oswald.png"></a>
 			<div class="hero__top-bar__right fx-container fx-centered-v">
-       <h5 id="button-js">Find more </h5>
+       <h5 id="button-js"><i class="fas fa-long-arrow-alt-right"></i> Find more</h5>
        <span class="hamburger__container">
         <div class="hamburger__bar hamburger__top"></div>
         <div class="hamburger__bar hamburger__middle"></div>
