--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
               <img src="img/svg/wordpress.svg" />
               <figcaption>
                 <h3>WORDPRESS</h3>
-                <p>This is what I use now in my daily work.</p>
+                <p>I use this with Genesis framework.</p>
               </figcaption>
               <div class="hover"></div>
             </figure>
