--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
               <img src="img/svg/wordpress.svg" />
               <figcaption>
                 <h3>WORDPRESS</h3>
-                <p>I use this with Genesis framework.</p>
+                <p>I use this CMS to create websites, blogs and landing pages.</p>
               </figcaption>
               <div class="hover"></div>
             </figure>
@@ -225,11 +225,11 @@
               </div>
             </div>
           </div>
-          <p>Currently I work in Zaliet. I develop websites for small law firms to efficiently and effectively serve their clients and earn more money.</p>
+          <p>Generally I have more over 2 years of experience in web development. Currently I work in Zaliet. I develop websites for small law firms to efficiently and effectively serve their clients and earn more money.</p>
 
           <p>Features like instruction forms, online appointment booking and online payments transform lawfirm website into a useful client portal that puts firm above the competition.</p>
 
-          <p>I have extensive experience in HTML and CSS. In addition to constantly improving skills in this direction, I would also like to focus on React. Moreover I develop myself in UX/UI design. You can find my work on <a href="https://dribbble.com/marcin-mroczko" target="_blank" class="link">dribbble</a>.</p>
+          <p>I have extensive experience in HTML,CSS and JS. In addition to constantly improving skills in this direction, I would also like to learn new thing and grow myself as a webdeveloper. Moreover I develop myself in UX/UI design. You can find my work on <a href="https://dribbble.com/marcin-mroczko" target="_blank" class="link">dribbble</a>.</p>
       </div>
       </div>
       <div class="about__interactive-box">
