--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Marcin Mroczko</title>
 	<meta charset="UTF-8">
@@ -225,7 +225,7 @@
               </div>
             </div>
           </div>
-          <p>Generally I have more over 2 years of experience in web development. Currently I work in Zaliet. I develop websites for small law firms to efficiently and effectively serve their clients and earn more money.</p>
+          <p>I have commercial experience currently working in Zaliet. I develop websites for small law firms to efficiently and effectively serve their clients and earn more money.</p>
 
           <p>Features like instruction forms, online appointment booking and online payments transform lawfirm website into a useful client portal that puts firm above the competition.</p>
 
