--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 	<title>Marcin Mroczko</title>
 	<meta charset="UTF-8">
+    <meta name="title" content="Web Developer and UI/UX designer - Marcin Mroczko">
+    <meta name="description" content="I am Web Developer and UX/UI designer. I create functional and aesthetic websites using various web technologies. I am constantly improving my technical skills and I am motivated to continue learning.">
+    <meta name="author" content="Web Developer and UI/UX designer - Marcin Mroczko">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i|Poppins:400,400i,700,700i,900,900i&amp;subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/preloader-css/style.min.css">
