--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
           <p>Features like instruction forms, online appointment booking and online payments transform lawfirm website into a useful client portal that puts firm above the competition.</p>
 
-          <p>I have extensive experience in HTML,CSS, JS and WP. In addition to constantly improving skills in this direction, I would also like to learn new skills and grow myself as a web developer. Moreover I develop myself in UX/UI design. You can find my work on <a href="https://dribbble.com/marcin-mroczko" target="_blank" class="link">dribbble</a>.</p>
+          <p>I have experience in HTML,CSS, JS and WP. In addition to constantly improving skills in this direction, I would also like to learn new skills and grow myself as a web developer. Moreover I develop myself in UX/UI design. You can find my work on <a href="https://dribbble.com/marcin-mroczko" target="_blank" class="link">dribbble</a>.</p>
       </div>
       </div>
       <div class="about__interactive-box">
@@ -249,6 +249,7 @@
               </div>
             </div>
           </div>
+          <p>To find more visit my <a href="https://github.com/MrEyelet" target="_blank" class="link">Github</a></p>
       </div>
     </section>
     <section id="contact" class="bg-img__container fx-container fx-column">
