--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@
       </div>
       </div>
       <div class="about__interactive-box">
-          <h2>Some of my live projects</h2>
-          <div class="interactive-box__inner-top fx-container">
+          <h2>My client's live projects</h2>
+          <div class="interactive-box__inner fx-container">
             <div class="interactive-box__tile fx-flex1">
               <div class="interactive-box__tile-overlay fx-container fx-centered">
                 <a href="http://www.birminghamsolicitorsltd.com/" target="_blank" class="fx-container fx-centered button">watch live</a>
@@ -246,6 +246,19 @@
             <div class="interactive-box__tile fx-flex1">
               <div class="interactive-box__tile-overlay fx-container fx-centered">
                 <a href="https://www.michaelfosterlaw.co.uk/" target="_blank" class="fx-container fx-centered button">watch live</a>
+              </div>
+            </div>
+          </div>
+          <h2>My github projects</h2>
+          <div class="interactive-box__inner fx-container">
+            <div class="interactive-box__tile fx-flex1">
+              <div class="interactive-box__tile-overlay fx-container fx-centered">
+                <a href="https://mreyelet.github.io/react-axios/" target="_blank" class="fx-container fx-centered button">watch live</a>
+              </div>
+            </div> 
+            <div class="interactive-box__tile fx-flex1">
+              <div class="interactive-box__tile-overlay fx-container fx-centered">
+                <a href="https://mreyelet.github.io/Converter/" target="_blank" class="fx-container fx-centered button">watch live</a>
               </div>
             </div>
           </div>
