--- a/index.html
+++ b/index.html
@@ -240,12 +240,12 @@
           <div class="interactive-box__inner fx-container">
             <div class="interactive-box__tile fx-flex1">
               <div class="interactive-box__tile-overlay fx-container fx-centered">
-                <a href="http://www.birminghamsolicitorsltd.com/" target="_blank" class="fx-container fx-centered button">watch live</a>
+                <a href="http://www.birminghamsolicitorsltd.com/" target="_blank" class="fx-container fx-centered button">live</a>
               </div>
             </div> 
             <div class="interactive-box__tile fx-flex1">
               <div class="interactive-box__tile-overlay fx-container fx-centered">
-                <a href="https://www.michaelfosterlaw.co.uk/" target="_blank" class="fx-container fx-centered button">watch live</a>
+                <a href="https://www.michaelfosterlaw.co.uk/" target="_blank" class="fx-container fx-centered button">live</a>
               </div>
             </div>
           </div>
@@ -253,12 +253,12 @@
           <div class="interactive-box__inner fx-container">
             <div class="interactive-box__tile fx-flex1">
               <div class="interactive-box__tile-overlay fx-container fx-centered">
-                <a href="https://mreyelet.github.io/react-axios/" target="_blank" class="fx-container fx-centered button">watch live</a>
+                <a href="https://mreyelet.github.io/react-axios/" target="_blank" class="fx-container fx-centered button">live</a> <a href="https://github.com/MrEyelet/react-axios" target="_blank" class="fx-container fx-centered button"><i class="fab fa-github" aria-hidden="true"></i></a>
               </div>
             </div> 
             <div class="interactive-box__tile fx-flex1">
               <div class="interactive-box__tile-overlay fx-container fx-centered">
-                <a href="https://mreyelet.github.io/Converter/" target="_blank" class="fx-container fx-centered button">watch live</a>
+                <a href="https://mreyelet.github.io/Converter/" target="_blank" class="fx-container fx-centered button">live</a> <a href="https://github.com/MrEyelet/Converter" target="_blank" class="fx-container fx-centered button"><i class="fab fa-github" aria-hidden="true"></i></a>
               </div>
             </div>
           </div>
