--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
               </div>
             </div>
           </div>
-          <h2>My client's live projects</h2>
+          <h2>My client's live websites</h2>
           <div class="interactive-box__inner fx-container">
             <div class="interactive-box__tile fx-flex1">
               <div class="interactive-box__tile-overlay fx-container fx-centered">
